<resources>
    <string name="app_name">Qualification</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="system_options">System options</string>
    <string name="clear_cache">Clear cache</string>
    <string name="staff_list">Staff list</string>
    <string name="my_profile">My profile</string>
    <string name="settings">Settings</string>
    <string name="name_and_surname">Name Surname</string>
    <string name="image_card_desc">Card</string>
    <string name="send_email">SEND\n EMAIL</string>
    <string name="title_activity_maps">Map</string>
    <string name="set_notification">SET\n NOTIFICATION</string>
    <string name="show_on_map">SHOW\n ON MAP</string>
    <string name="language">Choose language</string>
    <string name="photo_label">Photo</string>
    <string name="network_status">Network isn\'t available!</string>
    <string name="name_surname_hint">Enter your Name</string>
    <string name="app_data_deleted">App data deleted!</string>

</resources>
