<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_staff_list"
            android:icon="@drawable/ic_menu_staff_list"
            android:title="@string/staff_list" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_my_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/system_options">
        <menu>
            <item
                android:id="@+id/nav_clear_cache"
                android:icon="@drawable/ic_menu_clear_cache"
                android:title="@string/clear_cache" />
        </menu>
    </item>

</menu>
