<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/namePop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:layout_toLeftOf="@+id/closeCirclePop"
        android:layout_toStartOf="@+id/closeCirclePop" />

    <ImageView
        android:id="@+id/closeCirclePop"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_close_circle" />

    <ScrollView
        android:id="@+id/scrollViewPop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/closeCirclePop"
        android:layout_above="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:id="@+id/textViewPop" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/buttonPopEmail"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/send_email"
            android:textColor="@color/colorPopBtn" />

        <Button
            android:id="@+id/buttonPopNotification"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/set_notification"
            android:textColor="@color/colorPopBtn" />

        <Button
            android:id="@+id/buttonPopMap"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/show_on_map"
            android:textColor="@color/colorPopBtn" />
    </LinearLayout>

</RelativeLayout>